<resources>
    <string name="app_name">数字时代</string>
    <string name="wozhidol">我知道了</string>
    <string name="downloaded">&#160;%s %%</string>
    <string name="str_exit">退出登录</string>
    <string name="check_version">当前已经是最新版本</string>
    <string name="check_versions">有最新版本，快去更新吧</string>
    <string name="yihougx">以后更新</string>
    <string name="qugenx">去更新</string>
    <string name="str_tips_title">提示</string>
    <string name="str_offline_msg">您的帐号已在其它地方登陆</string>
    <string name="str_room_discuss">主播已离开房间，是否退出?</string>
    <string name="publish_photo_take">拍照</string>
    <string name="publish_photo_album">相册</string>
    <string name="publish_need_photo_tips">从未发起过图片，请选择一张作为直播封面</string>
    <string name="publish_wait_uploading">请等待封面上传完成</string>
    <string name="publish_upload_success">上传封面成功</string>
    <string name="publish_photo_make_sure_tips">请添加一张照片</string>
    <string name="publish_photo_make_sure_title">请输入图片标题</string>
    <string name="publish_create_room_failed">创建房间失败</string>
    <string name="publish_upload_cover_failed">上传封面失败</string>
    <string name="publish_photo_success">发布图片成功</string>
    <string name="text_continue">继续</string>
    <string name="text_publish">开始直播</string>
    <string name="text_live_preview">发布直播</string>
    <string name="text_photo_preview">发布照片</string>
    <string name="text_live_title_input">请输入直播标题</string>
    <string name="text_photo_title_input">你的照片你做主</string>
    <string name="text_live_open_lbs">开启位置</string>
    <string name="text_live_close_lbs">不显示位置</string>
    <string name="text_live_location">正在定位中</string>
    <string name="text_live_lbs_fail">定位失败</string>
    <string name="text_live_lbs_unknown">未知</string>
    <string name="text_live_default_title">我的直播我做主</string>
    <string name="text_start_push">开启推流</string>
    <string name="text_record_info">开始录制后直播视频自动录制，并可以进行回放</string>
    <string name="text_live_all_see">所有人可看</string>
    <string name="text_live_share">同步到</string>
    <string name="text_live">正在直播>></string>
    <string name="text_live_add_title_tips">给你的直播设置一个满意的封面</string>
    <string name="text_live_admire_limit">点赞过于频繁</string>
    <string name="tip_no_permission">权限不足</string>
    <string name="str_search_key">用户名</string>
    <string name="str_search_size">数量</string>
    <string name="str_hint_account">用户名为4~24个字符(不包含特殊字符)，不能为纯数字</string>
    <string name="str_hint_pwd">密码长度为8~16个字符</string>
    <string name="str_tips_force_exit">管理员已将房间解散或将您踢出房间!</string>
    <string name="permission_resume">继续</string>
    <string name="permission_title_permission_rationale">权限已被拒绝</string>
    <string name="permission_message_permission_rationale">您已经拒绝过我们申请授权，请您同意授权，否则功能无法正常使用！</string>
    <string name="title_settings_dialog">权限申请</string>
    <string name="permission_exit">退出</string>
    <string name="permission_cancel">取消</string>
    <string name="permission_setting">去设置</string>
    <string name="permission_title_permission_failed">权限申请失败</string>
    <string name="permission_message_permission_failed">我们需要的一些权限被您拒绝或者系统发生错误申请失败，请您到设置页面手动授权，否则功能无法正常使用！</string>
    <string name="faqiqunliao">发起群聊</string>
    <string name="tianjiahaoyou">添加好友</string>
    <string name="saoyisao">扫一扫</string>
    <string name="kefudianhau">电话客服</string>
    <string name="zaixiankefu">在线客服</string>
    <string name="zaixiankefus">在线客服</string>
    <string name="heimingdan">黑名单</string>
    <string name="tianjaihaoyiou">添加好友</string>
    <string name="zhengzaihuoqusj">正在获取群组数据</string>
    <string name="qunliao">群聊</string>
    <string name="chuangjjianql">创建群聊</string>
    <string name="jiaqunchenngyuan">加群成员</string>
    <string name="qingshuruqzmc">请输入群组名称</string>
    <string name="qingshuruqzjj">请输入群组简介</string>
    <string name="qunzuqx">群组权限</string>
    <string name="chenyuanjiaruqx">成员加入权限</string>
    <string name="jiaruqunzhuxuyaoquanxian">加入群组需要管理员同意</string>
    <string name="qunzumingcbnwk">群组名称不能为空</string>
    <string name="wodezhanghao">我的账号</string>
    <string name="yitianjia">已添加</string>
    <string name="jiahaoyou">加好友</string>
    <string name="have_connected_with">已经和对方建立连接</string>
    <string name="no_call_data">没有通话数据</string>
    <string name="network_unstable">网络不稳定</string>
    <string name="did_not_answer">未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="call_version_inconsistent">通话协议版本不一致</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="not_connect_to_server">尚未连接至服务器，请稍后重试</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="capture_image">抓取图片</string>
    <string name="jiaqunchenyuan">加群成员</string>
    <string name="nihaiweixuanzhecy">你还未选择成员</string>
    <string name="addsuccse">添加成功</string>
    <string name="huoquliebiao">获取群列表...</string>
    <string name="quedingshanchugaiqz">确定删除该群主吗</string>
    <string name="chuangqunzhong">创群中...</string>
    <string name="qunliaosz">群聊设置</string>
    <string name="bujieshouxiaoxi">不接受消息</string>
    <string name="qunliaojianjie">群聊简介</string>
    <string name="qunliaonic">群名称</string>
    <string name="fasonghy">发送好友</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="attach_red">兑换值红包</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="video_call">[视频通话]</string>
    <string name="dynamic_expression">[动态表情]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">搜</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="setting">设置</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="voice_and_video_conference">音视频会议</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="fzmcs">分组名称:</string>
    <string name="hyfz">好友分组</string>
    <string name="srfzmc">输入分组名称</string>
    <string name="bzbly">不直播留言:</string>
    <string name="bc">保存</string>
    <string name="chongzhi">充值</string>
    <string name="mx">明细</string>
    <string name="jfcz">兑换值充值</string>
    <string name="sjh">手 机 号</string>
    <string name="qsrsjh">请输入手机号</string>
    <string name="fjxx">房间信息</string>
    <string name="fjmc">房间名称:</string>
    <string name="qsrfjmc">请输入房间名称</string>
    <string name="zyfjmcszhbkxg">注意：房间名称设置后不可修改。</string>
    <string name="zbbt">直播标题:</string>
    <string name="fjtp">房间图片:</string>
    <string name="zbbtbcg">标题不超过15个字符</string>
    <string name="ly">留言</string>
    <string name="dq">当前</string>
    <string name="qd">确定</string>
    <string name="wdjfs">我的兑换值:</string>
    <string name="shr">收货人</string>
    <string name="qsrzsxm">请输入真实姓名</string>
    <string name="qxzdq">请选择地区</string>
    <string name="xxdz">详细地址</string>
    <string name="szwmrdz">设为默认地址</string>
    <string name="qrscgdz">确认删除该地址吗？</string>
    <string name="qsrxxdz">请输入详细地址</string>
    <string name="xzshdz">新增收货地址</string>
    <string name="kjhlgbsh">科技互联，改变生活</string>
    <string name="kwlznydx">看未来，智能引导新 生活享科技，打造前卫新生活</string>
    <string name="sstx">实时通讯</string>
    <string name="ykltjkwk">一款聊天即可挖矿赚钱的APP</string>
</resources>