<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <com.zhongchuang.canting.widget.NavigationBar
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationTitle="@string/fjxx"
/>
    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingRight="14dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333"
            android:textSize="13sp"
            android:text="@string/fjmc" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"

            android:background="@drawable/black_rectangle_lines"
            android:orientation="vertical">

            <com.zhongchuang.canting.widget.ClearEditText
                android:id="@+id/et_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:lines="1"
                android:hint="@string/qsrfjmc"
                android:minHeight="30dp"
                android:paddingLeft="9dp"
                android:paddingRight="11dp"
                android:textColor="#333"
                android:textColorHint="#999"
                android:textSize="13sp" />


        </LinearLayout>
    </LinearLayout>
    <TextView
        android:lines="1"
        android:id="@+id/tv_name"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="79dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF2727"
        android:textSize="12sp"
        android:text="@string/zyfjmcszhbkxg" />
    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingRight="14dp">
        <TextView
            android:layout_marginTop="11dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333"
            android:textSize="13sp"
            android:text="@string/zbbt" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/black_rectangle_lines"
            android:orientation="vertical">

            <com.zhongchuang.canting.widget.ClearEditText
                android:id="@+id/et_room_der"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/zbbtbcg"
                android:minHeight="30dp"
                android:paddingLeft="9dp"
                android:maxLength="16"
                android:textColor="#333"
                android:textColorHint="#999"
                android:textSize="13sp" />


        </LinearLayout>
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#333"
                android:textSize="13sp"
                android:text="@string/fjtp" />
            <ImageView
                android:id="@+id/iv_add_photo"
                android:layout_width="99dp"
                android:layout_height="99dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:src="@drawable/add_img"
             />
        </LinearLayout>


    </FrameLayout>


    <TextView
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/login_selector"
        android:gravity="center"
        android:text="@string/bc"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>