<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <com.zhongchuang.canting.widget.NavigationBar
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationLeft_img="@drawable/back_white"
        app:navigationRight_type="txt"
        app:navigationRight_txt="@string/mx"
        app:navigationTitle="@string/jfcz" />
    <LinearLayout
        android:layout_marginTop="56dp"
        android:id="@+id/ll_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:src="@drawable/wallet2" />
        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/wdjfs"
                android:textColor="#575458"
                android:textSize="14sp" />

            <TextView
                android:layout_marginLeft="18dp"
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0.50"
                android:textColor="#575458"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_charge"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:background="@drawable/black_rectangle3"
        android:text="@string/chongzhi"
        android:textColor="#fff"
        android:textSize="15sp" />

</LinearLayout>