<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zhongchuang.canting.activity.RechargeActivity">


    <com.zhongchuang.canting.widget.NavigationBar
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationLeft_img="@drawable/back_white"

        app:navigationTitle="@string/ly" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/black_rectangle_lines"
        android:orientation="vertical">
        <com.zhongchuang.canting.widget.ClearEditText
            android:layout_marginTop="4dp"
            android:id="@+id/et_content"
            android:hint="@string/bzbly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:layout_centerVertical="true"
             android:paddingRight="11dp"
            android:background="@null"
            android:paddingLeft="9dp"
            android:textColor="#333"
            android:textColorHint="#999"
            android:textSize="15sp" />


    </LinearLayout>




    <TextView
        android:id="@+id/tv_save"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/black_rectangle3"
        android:gravity="center"
        android:text="@string/bc"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
